--- a/FPgrps2.tex
+++ b/FPgrps2.tex
@@ -604,41 +604,79 @@ from $G$ to $S_3$.}
 \subsection{Strategies}
 
 \begin{frame}
+\begin{itemize}
+\item 
+We had \Struc{a lot of choice} as to what we \Alert{define next}.
 
+\pause
+\item 
+We \Struc{sort out coincidences} before we \Alert{define new cosets}.
+
+\pause
+\item
+\Struc{Direct deductions} are preferable to \Alert{random definitions}.
+
+\pause
+\item An \Struc{definition algorithm} is called a \Alert{strategy}.
+\end{itemize}
+
+\pause
+There are many strategies, for example:
+\begin{enumerate}
+\item \Alert{HLT} (Haselgrove-Leech-Trotter): define cosets to \Struc{scan
+relators}
+\pause
+\item \Alert{Felsch}: define cosets to \Struc{fill rows of the table}
+\end{enumerate}
+
+\pause
+\bigskip
+\Struc{However:}
+
+\bigskip
+\centerline{\textbf{No strategy is always optimal.}}
+
+\bigskip
+\pause
+\centerline{\textbf{Runtime and memory usage vary enormously with the
+strategy.}}
 \end{frame}
 
-\subsection{Properties of the algorithm}
+\subsection{Properties of the algorithm, termination}
 
 \begin{frame}
 The Todd-Coxeter algorithm has the following features:
 
 \begin{itemize}
-\item There is a great deal of \Struc{choice} of what to do when and various
-\Struc{strategies}.
-\pause
 \item \Alert{If it terminates}, it \Struc{proves} that $[G:H]$ is finite
 and it \Struc{constructs} the permutation action of $G$ on the right cosets
 of $H$.
+\end{itemize}
+
 \pause
-\item \Alert{If $[G:H]$ is finite}, then the algorithm
-\Struc{terminates eventually} (with the right strategy).
+\begin{theorem}[Termination of the Todd-Coxeter procedure]
+Assume \Alert{$[G:H] < \infty$} and 
+a \Alert{deterministic strategy} with:
+\begin{itemize}
+\item all entries will \Struc{eventually be filled},
+\item all relators will \Struc{eventually be scanned} from each coset, and
+\item all subgroup generators will \Struc{eventually be scanned} from
+coset \#1.
+\end{itemize}
+Then the Todd-Coxeter procedure \Struc{terminates eventually}.
+\end{theorem}
+
 \pause
+\begin{itemize}
 \item \Alert{No limit} on \Struc{memory} and \Struc{runtime} is known
 a priori.
 \pause
 \item A completed coset enumeration with $H=\{1\}$ \Struc{proves} $G$ to be 
 \Struc{finite} and \Struc{determines the order}.
 \pause
-\item A \Struc{not-yet-terminated} coset enumeration \Alert{proves nothing
+\item An \Struc{unfinished} coset enumeration \Alert{proves nothing
 whatsoever}.
 \end{itemize}
-\end{frame}
-
-
-\subsection{Good news: terminates if index is finite}
-
-\begin{frame}
-
 \end{frame}
 
 
@@ -677,6 +715,7 @@ We \Struc{start with an empty coset table with $k$ rows} and
 \end{itemize}
 \end{block}
 
+\pause
 \medskip
 $\Longrightarrow$ This \Alert{very quickly} becomes \Alert{impractical} 
 for larger $k$.
@@ -899,7 +938,52 @@ and continue the search.}
 \subsection{Removing duplicates}
 
 \begin{frame}
+\begin{definition}[Standardised coset table]
+A coset table is called \Struc{standardised}, if reading it row by row and
+left to right finds new numbers in order 2, 3, $\ldots$, $n$.
+\end{definition}
 
+\pause
+\begin{tabular}[c]{|l|l|c|c|c|c|}
+\hline
+ \#  &  $a$ & $b$ & $b^{-1}$ \\
+\hline
+\hline
+  1  &   1  &  2  &    3     \\
+  2  &   3  &  3  &    1     \\
+  3  &   2  &  1  &    2     \\
+\hline
+\end{tabular} is standardised,
+\pause
+\begin{tabular}[c]{|l|l|c|c|c|c|}
+\hline
+ \#  &  $a$ & $b$ & $b^{-1}$ \\
+\hline
+\hline
+  1  &   1  &  3  &    2     \\
+  2  &   3  &  1  &    3     \\
+  3  &   2  &  2  &    1     \\
+\hline
+\end{tabular} is not.
+
+\pause
+\begin{proposition}
+For $G := \left< X \mid R \right>$, the set of \Struc{subgroups of index
+$n$} is in bijection with the set of
+\Struc{standardised coset tables with $n$ rows}.
+\pause
+If $[G:H]=n$, the \Struc{conjugates $\{H^x\mid x\in G\}$} are the
+stabilisers of the points $\{Hx \mid x \in G\}$.
+\end{proposition}
+
+\pause
+Therefore, the \Struc{low index procedure}
+\begin{itemize}
+\item only \Struc{enumerates} \Alert{standardised coset tables},
+\pause
+\item and \Struc{discards} those which are not \Alert{lexicographically
+least} among the renumbered ones, \pause this \Struc{gets rid of duplicates}.
+\end{itemize}
 \end{frame}
 
 
